# whatsup

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: promote-to-stable.yaml  release-to-candidate.yaml
data/: CMakeLists.txt  io.github.soumyadghosh.whatsup.desktop
snap/: snapcraft.yaml
snap/gui/: whatsup.desktop
src/: CMakeLists.txt  application.h  config.kcfg  downloadmanager.cpp  downloadmanager.h  main.cpp  permissionmanager.cpp  permissionmanager.h  profilemanager.cpp  profilemanager.h  sqlhelper.cpp  sqlhelper.h  useragentmanager.cpp  useragentmanager.h
src/qml/: DownloadsPage.qml  Main.qml  RequestPermission.qml  SettingsPage.qml  WebEnginePage.qml  WhatsupDrawer.qml
